Try to fix gallery alignment on homepage (third attempt).

--- a/styles/index.less
+++ b/styles/index.less
@@ -410,7 +410,7 @@ h3 {
         clear: none; // necessary if an element above has float, otherwise rows will no longer align
     }
 
-    .sqs-block-gallery:first-child {
+    .sqs-block-gallery:first-of-type {
         top: -60px;
     }
 
